test/parsing/errors/foreach.boa
o: output sum of int;

for (i: int; input.programming_langagues[i] == "foo")
    o << 1;
